♻️ refactor GridViewModel: Use Stream.toList() for cleaner and more concise list collection in getAllValues()